--- a/public/templates/components/navbar.twig
+++ b/public/templates/components/navbar.twig
@@ -3,7 +3,8 @@
         <a class="navbar-brand" href="/">
             <i class="fas fa-mushroom"></i> {{ _('FungiDB') }}
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain"
+            aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -25,7 +26,8 @@
 
             <form class="form-inline my-2 my-lg-0 mx-auto" action="/search" method="GET">
                 <div class="input-group">
-                    <input class="form-control" type="search" name="q" placeholder="{{ _('Buscar hongos...') }}" aria-label="Search">
+                    <input class="form-control" type="search" name="q" placeholder="{{ _('Buscar hongos...') }}"
+                        aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn btn-outline-light" type="submit">
                             <i class="fas fa-search"></i>
@@ -36,40 +38,42 @@
 
             <ul class="navbar-nav ml-auto">
                 {% if is_logged_in %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-user-circle"></i> 
-                            {{ user.username }}
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/profile">
-                                <i class="fas fa-id-card"></i> {{ _('Mi Perfil') }}
-                            </a>
-                            <a class="dropdown-item" href="/favorites">
-                                <i class="fas fa-heart"></i> {{ _('Favoritos') }}
-                            </a>
-                            {% if user.is_admin %}
-                            <a class="dropdown-item" href="/admin">
-                                <i class="fas fa-cogs"></i> {{ _('Administración') }}
-                            </a>
-                            {% endif %}
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/logout">
-                                <i class="fas fa-sign-out-alt"></i> {{ _('Cerrar sesión') }}
-                            </a>
-                        </div>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-light btn-sm mr-2" href="/login">{{ _('Iniciar sesión') }}</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-primary btn-sm" href="/register">{{ _('Registrarse') }}</a>
-                    </li>
-                {% endif %}
-                
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user-circle"></i>
+                        {{ user.username }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/profile">
+                            <i class="fas fa-id-card"></i> {{ _('Mi Perfil') }}
+                        </a>
+                        <a class="dropdown-item" href="/favorites">
+                            <i class="fas fa-heart"></i> {{ _('Favoritos') }}
+                        </a>
+                        {% if user.is_admin %}
+                        <a class="dropdown-item" href="/admin">
+                            <i class="fas fa-cogs"></i> {{ _('Administración') }}
+                        </a>
+                        {% endif %}
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/logout">
+                            <i class="fas fa-sign-out-alt"></i> {{ _('Cerrar sesión') }}
+                        </a>
+                    </div>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline-light btn-sm mr-2" href="/login">{{ _('Iniciar sesión') }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-primary btn-sm" href="/register">{{ _('Registrarse') }}</a>
+                </li>
+                {% endif %}
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-globe"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
