--- a/public/templates/components/navbar.twig
+++ b/public/templates/components/navbar.twig
@@ -3,13 +3,13 @@
         <a class="navbar-brand" href="/">
             <i class="fas fa-mushroom"></i> {{ _('FungiDB') }}
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain"
-            aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
+            aria-controls="navbarMain" aria-expanded="false" aria-label="{{ _('Toggle navigation') }}">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarMain">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item {{ current_route == '/' ? 'active' : '' }}">
                     <a class="nav-link" href="/">{{ _('Inicio') }}</a>
                 </li>
@@ -24,27 +24,25 @@
                 </li>
             </ul>
 
-            <form class="form-inline my-2 my-lg-0 mx-auto" action="/search" method="GET">
+            <form class="d-flex my-2 my-lg-0 mx-auto" action="/search" method="GET">
                 <div class="input-group">
                     <input class="form-control" type="search" name="q" placeholder="{{ _('Buscar hongos...') }}"
                         aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-light" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
+                    <button class="btn btn-outline-light" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
                 </div>
             </form>
 
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ms-auto">
                 {% if is_logged_in %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-user-circle"></i>
                         {{ user.username }}
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/profile">
                             <i class="fas fa-id-card"></i> {{ _('Mi Perfil') }}
                         </a>
@@ -60,11 +58,11 @@
                         <a class="dropdown-item" href="/logout">
                             <i class="fas fa-sign-out-alt"></i> {{ _('Cerrar sesión') }}
                         </a>
-                    </div>
+                    </ul>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link btn btn-outline-light btn-sm mr-2" href="/login">{{ _('Iniciar sesión') }}</a>
+                    <a class="nav-link btn btn-outline-light btn-sm me-2" href="/login">{{ _('Iniciar sesión') }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-primary btn-sm" href="/register">{{ _('Registrarse') }}</a>
@@ -73,16 +71,83 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-globe"></i>
+                        {% if idioma_actual == 'es' %}
+                            <span class="d-none d-md-inline ml-1">ES</span>
+                        {% elseif idioma_actual == 'en' %}
+                            <span class="d-none d-md-inline ml-1">EN</span>
+                        {% elseif idioma_actual == 'ca' %}
+                            <span class="d-none d-md-inline ml-1">CA</span>
+                        {% elseif idioma_actual == 'fr' %}
+                            <span class="d-none d-md-inline ml-1">FR</span>
+                        {% elseif idioma_actual == 'de' %}
+                            <span class="d-none d-md-inline ml-1">DE</span>
+                        {% endif %}
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
-                        <a class="dropdown-item" href="?lang=es">Español</a>
-                        <a class="dropdown-item" href="?lang=en">English</a>
-                        <a class="dropdown-item" href="?lang=ca">Català</a>
-                    </div>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
+                        <li>
+                            <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'es' %}active{% endif %}" data-lang="es">
+                                <img src="/assets/images/flags/es.png" alt="Español" width="20" class="me-2">Español
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'en' %}active{% endif %}" data-lang="en">
+                                <img src="/assets/images/flags/en.png" alt="English" width="20" class="me-2">English
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'ca' %}active{% endif %}" data-lang="ca">
+                                <img src="/assets/images/flags/ca.png" alt="Català" width="20" class="me-2">Català
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'fr' %}active{% endif %}" data-lang="fr">
+                                <img src="/assets/images/flags/fr.png" alt="Français" width="20" class="me-2">Français
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'de' %}active{% endif %}" data-lang="de">
+                                <img src="/assets/images/flags/de.png" alt="Deutsch" width="20" class="me-2">Deutsch
+                            </button>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Obtener todos los botones de cambio de idioma
+    const langButtons = document.querySelectorAll('.lang-switch');
+    
+    // Añadir listener a cada botón
+    langButtons.forEach(button => {
+        button.addEventListener('click', function() {
+            const lang = this.getAttribute('data-lang');
+            
+            // Crear una solicitud AJAX
+            const xhr = new XMLHttpRequest();
+            xhr.open('POST', '/change-language', true);
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+            
+            // Manejar la respuesta
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    // Recargar los componentes de la página sin recargar completamente
+                    // Esto se puede mejorar con una respuesta JSON más detallada
+                    location.reload();
+                }
+            };
+            
+            // Enviar la solicitud
+            xhr.send('lang=' + lang);
+        });
+    });
+});
+</script>
+
+<!-- Bootstrap 5 no requiere inicialización manual de los dropdowns -->
