--- a/public/templates/components/navbar.twig
+++ b/public/templates/components/navbar.twig
@@ -22,6 +22,9 @@
                 <li class="nav-item {{ current_route == '/about' ? 'active' : '' }}">
                     <a class="nav-link" href="/about">{{ _('Acerca de') }}</a>
                 </li>
+                <li class="nav-item {{ current_route == '/docs/api' ? 'active' : '' }}">
+                    <a class="nav-link" href="/docs/api">{{ _('Api') }}</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 {% if is_logged_in %}
